added another RSS feed and nicer placeholder image

--- a/public/greatTips.html
+++ b/public/greatTips.html
@@ -140,7 +140,7 @@
 
                                         card.innerHTML = `
                                             <!--Thumbnail-->
-                                            <img class="card-img-top" style="height: 100px; width: 90%; object-fit: cover; display: block; margin-left: auto; margin-right: auto;" src="${item.thumbnail || 'https://placehold.co/600x400'}" alt="article image from rss feed">
+                                            <img class="card-img-top" style="height: 100px; width: 90%; object-fit: cover; display: block; margin-left: auto; margin-right: auto;" src="${item.thumbnail || 'images/placeholder.png'}" alt="article image from rss feed">
                                             
                                             <div class="row article-container align-items-center p-3">
                                                 <!--Contents-->
